--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <title>Fusion Tables Layer Example: Legend</title>
 
     <script type="text/javascript"
-        src="http://maps.google.com/maps/api/js?key=AIzaSyDiGK8T4yG71LEKvk8CHqyyDltSLVXz7Bs"></script>
+        src="https://maps.google.com/maps/api/js?key=AIzaSyDiGK8T4yG71LEKvk8CHqyyDltSLVXz7Bs"></script>
 
     <style type="text/css">
       html, body, #map-canvas {
