--- a/index.html
+++ b/index.html
@@ -142,19 +142,18 @@
         var legend = document.createElement('div');
         legend.id = 'legend';
         var content = [];
-        content.push('<h3>Cost based on County/Municipality</h3>');
         content.push("<div class='my-legend'>")
         content.push("<div class='legend-title'>Cost based on County/Municipality</div>")
         content.push("<div class='legend-scale'>");
         content.push("<ul class='legend-labels'>")
-        content.push("<li><span class = 'fistcolor'></span>0 - 300</li>");
-        content.push("<li><span class = 'secondcolor'></span>301 - 500</li>");
-        content.push("<li><span class = 'thirdcolor'></span>501 - 700</li>");
-        content.push("<li><span class = 'fourthcolor'></span>701 - 2,000</li>");
-        content.push("<li><span class = 'fiftholor'></span>2,001 - 5,000</li>");
-        content.push("<li><span class = 'sixthcolor'></span>5,001 - 10,000</li>");
-        content.push("<li><span class = 'seventcolor'></span>10,001 - 20,000</li>");
-        content.push("<li><span class = 'eigthcolor'></span>20,001 - 30,000</li>");
+        content.push("<li><span class = 'firstrange'></span>0 - 300</li>");
+        content.push("<li><span class = 'secondrange'></span>301 - 500</li>");
+        content.push("<li><span class = 'thirdrange'></span>501 - 700</li>");
+        content.push("<li><span class = 'fourthrange'></span>701 - 2,000</li>");
+        content.push("<li><span class = 'fifthrange'></span>2,001 - 5,000</li>");
+        content.push("<li><span class = 'sixthrange'></span>5,001 - 10,000</li>");
+        content.push("<li><span class = 'seventhrange'></span>10,001 - 20,000</li>");
+        content.push("<li><span class = 'eigthrange'></span>20,001 - 30,000</li>");
         content.push("</ul>")
         content.push("</div>")
         content.push("</div>");
