few changes added
few changes added

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         var layer = new google.maps.FusionTablesLayer({
           map: map,
           query: {
-            select: 'geometry',
+            select: 'col14',
             from: '1csJ4KiOaquOxkpZK73zUbMN_aC1YHoNCi_PgGdFS',
           },
           options:{
